# text-sight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: ascii.cpp  ascii.hpp  main.cpp
src/app/: app_controller.cpp  app_controller.hpp  app_state.hpp
src/services/: camera.cpp  camera.hpp  command_registry.cpp  command_registry.hpp
src/ui/: app_components.cpp  app_components.hpp  controller.cpp  controller.hpp  image_canvas.cpp  image_canvas.hpp  view.cpp  view.hpp
src/ui/overlays/: command_line.hpp  status_window.hpp  title_bar.hpp
